error.txt
D:/Projects/usb_ble_keyboard/components/bt_hid_device/include/esp_hid_gap.h:21:30: error: unknown type name 'uint8_t'
   21 | void esp_hid_gap_send_report(uint8_t *report, size_t len);
      |                              ^~~~~~~
D:/Projects/usb_ble_keyboard/components/bt_hid_device/include/esp_hid_gap.h:1:1: note: 'uint8_t' is defined in header '<stdint.h>'; this is probably fixable by adding '#include <stdint.h>'
  +++ |+#include <stdint.h>
    1 | #pragma once
D:/Projects/usb_ble_keyboard/components/bt_hid_device/include/esp_hid_gap.h:21:47: error: unknown type name 'size_t'
   21 | void esp_hid_gap_send_report(uint8_t *report, size_t len);
      |                                               ^~~~~~
D:/Projects/usb_ble_keyboard/components/bt_hid_device/include/esp_hid_gap.h:1:1: note: 'size_t' is defined in header '<stddef.h>'; this is probably fixable by adding '#include <stddef.h>'
  +++ |+#include <stddef.h>
    1 | #pragma once
[1328/1380] Performing configure step for 'bootloader'
-- Found Git: D:/Espressif/tools/idf-git/2.44.0/cmd/git.exe (found version "2.44.0.windows.1")
-- Minimal build - OFF
-- The C compiler identification is GNU 14.2.0
-- The CXX compiler identification is GNU 14.2.0
-- The ASM compiler identification is GNU
-- Found assembler: D:/Espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc.exe
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: D:/Espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc.exe - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: D:/Espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++.exe - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Building ESP-IDF components for target esp32s3
-- Project sdkconfig file D:/Projects/usb_ble_keyboard/sdkconfig
-- Compiler supported targets: xtensa-esp-elf
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32s3/ld/esp32s3.peripherals.ld
-- Bootloader project name: "bootloader" version: 1
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.api.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.bt_funcs.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.libgcc.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.wdt.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.version.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.libc.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/ld/esp32s3.rom.newlib.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/bootloader/subproject/main/ld/esp32s3/bootloader.ld
-- Adding linker script D:/Espressif/frameworks/esp-idf-v5.5.1/components/bootloader/subproject/main/ld/esp32s3/bootloader.rom.ld
-- Components: bootloader bootloader_support efuse esp_app_format esp_bootloader_format esp_common esp_hw_support esp_rom esp_security esp_system esptool_py freertos hal log main micro-ecc newlib partition_table soc spi_flash xtensa
-- Component paths: D:/Espressif/frameworks/esp-idf-v5.5.1/components/bootloader D:/Espressif/frameworks/esp-idf-v5.5.1/components/bootloader_support D:/Espressif/frameworks/esp-idf-v5.5.1/components/efuse D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_app_format D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_bootloader_format D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_common D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_security D:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system D:/Espressif/frameworks/esp-idf-v5.5.1/components/esptool_py D:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos D:/Espressif/frameworks/esp-idf-v5.5.1/components/hal D:/Espressif/frameworks/esp-idf-v5.5.1/components/log D:/Espressif/frameworks/esp-idf-v5.5.1/components/bootloader/subproject/main D:/Espressif/frameworks/esp-idf-v5.5.1/components/bootloader/subproject/components/micro-ecc D:/Espressif/frameworks/esp-idf-v5.5.1/components/newlib D:/Espressif/frameworks/esp-idf-v5.5.1/components/partition_table D:/Espressif/frameworks/esp-idf-v5.5.1/components/soc D:/Espressif/frameworks/esp-idf-v5.5.1/components/spi_flash D:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa
-- Configuring done (9.8s)
-- Generating done (0.1s)
-- Build files have been written to: D:/Projects/usb_ble_keyboard/build/bootloader
ninja: build stopped: subcommand failed.
ninja failed with exit code 1, output of the command is in the D:\Projects\usb_ble_keyboard\build\log\idf_py_stderr_output_16660 and D:\Projects\usb_ble_keyboard\build\log\idf_py_stdout_output_16660
